--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
-title: rodolfograve.com
+title: RodolfoGrave.com
 author: Rodolfo Grave
 description: Let's get technical
